--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- react -->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <script type="module" src="messengerReducer.js"></script>
+    <script type="module" src="ContactList.js"></script>
+    <script type="module" src="Chat.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 
